use typescript, send in-chat message on game over

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     />
     <script src="webxdc.js"></script>
 
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="./src/styles.css" rel="stylesheet" />
     <script src="soundmanager2-setup.js"></script>
     <script src="soundmanager2-jsmin.js"></script>
   </head>
 
   <body>
     <div align="center" id="embed-html"></div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 
   <script>
